change styling of enter button. Change margin to make it correctly aligned with delete

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@
 }
 
 .submit_btn {
-  @apply hover:border-gray-700 hover:text-gray-700 absolute inset-y-0 right-0 my-1.5 mr-1.5 flex w-10 items-center justify-center rounded border border-gray-200 font-sans text-sm font-medium text-gray-400;
+  @apply rounded-full w-7 h-7 hover:border-gray-700 hover:text-gray-700 absolute shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur inset-y-0 right-0 my-1.5 mr-3 flex justify-center items-center cursor-pointer font-sans text-sm font-medium text-gray-400;
 }
 
 .link_card {
